--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,14 @@ spring.datasource.password=mypass123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.main.allow-circular-references=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=andreypravdin52@gmail.com
+spring.mail.password=soedmmqfzrdzcoui
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required = true
+#spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
+#spring.mail.properties.mail.smtp.socketFactory.fallback = false
+#spring.mail.properties.mail.smtp.socketFactory.port = 465
