--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/course_work
 spring.datasource.username=root
-spring.datasource.password=mypass123
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.main.allow-circular-references=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=andreypravdin52@gmail.com
-spring.mail.password=soedmmqfzrdzcoui
+spring.mail.username=
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 #spring.mail.properties.mail.smtp.starttls.required = true
